Adds image, title, and flex container to header.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="header">
+    <img src="images/Drexel_horizontal_blue.png" alt="Drexel Horizontal Logo" id="logo">
+    <h1>Concentration Tracker</h1>
+  </div>
+  
   <div class="students">
     
   </div>
